tests/calico_testcases/example_policies/testcase8/testcase8-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: np1
    networkPolicyList:
      - testcase8-networkpolicy.yaml
    expectedWarnings: 1

  - name: global-allow-all
    networkPolicyList:
      - ../common-policies/policy-allow-all.yaml

queries:
  - name: withConflict_empty
    emptiness:
      - np1/kube-system/ingress-networkpolicy-with-conflict-destination
    expected: 1

  - name: withConflict_vacuous
    vacuity:
      - np1/kube-system/ingress-networkpolicy-with-conflict-destination
    expected: 0

  - name: semanticDiff
    semanticDiff:
      - np1/kube-system/ingress-networkpolicy-with-conflict-destination
      - global-allow-all
    expectedOutput: ../../expected_output/testcase8-semantic-diff-query.txt

  - name: non_empty
    emptiness:
      - np1/kube-system/egress-networkpolicy-with-source
    expected: 0

  - name: non_vacuous
    vacuity:
      - np1/kube-system/egress-networkpolicy-with-source
    expected: 0

  - name: policies_not_equiv
    equivalence:
      - np1/kube-system/ingress-networkpolicy-with-conflict-destination
      - np1/kube-system/egress-networkpolicy-with-source
    expected: 1
